2001-10-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
        * Eliminated libMagick.so dependency on libxml by not listing
          -lxml when doing modules link.

2001-10-18  Cristy  <cristy@mystic.es.dupont.com>
	* Eliminated the libMagick.so dependancy on libtiff by moving
	  Huffman2DEncodeImage() from magick/compress.c to coders/pdf.c,
	  coders/ps2.c and coders/ps3.c (suggested by Bob Friesenhahn).
          This change has the side-effect of elminating dependency
          on libpng and libjpeg as well (which libtiff may depend on).

2001-10-16  Cristy  <cristy@mystic.es.dupont.com>
	* Convert now supports -channel {Cyan,Magenta,Yellow,Black}.

2001-10-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
        * coders/wmf.c updated for libwmf 0.2.  Plenty of bugs
          remain within.

2001-10-11  Cristy  <cristy@mystic.es.dupont.com>
	* QueryFontMetrics() of PerlMagick now recognizes embedded
	  special characters (e.g. %h).

2001-10-10  Cristy  <cristy@mystic.es.dupont.com>
	* Fixed seg-fault for PingImage() on a JP2 image file.

2001-10-07  Cristy  <cristy@mystic.es.dupont.com>
	* CloneImage() now uses a referenced counted pixel cache.

2001-10-05  Cristy  <cristy@mystic.es.dupont.com>
	* Added AcquireImagePixels() method.
	* Changed the formal parameter from Image * to const Image *
	  for a number of methods (e.g. ZoomImage()).
	* Added ExceptionInfo parameter to DispatchImage().

2001-10-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
        * Find libxml headers under Debian Linux (bug ID 921).

2001-10-02  Cristy  <cristy@mystic.es.dupont.com>
	* Fixed assertion error on drawing stroked text.

2001-10-01  Cristy  <cristy@mystic.es.dupont.com>
	* Added blob test to the PerlMagick test suite.

2001-09-30  Cristy  <cristy@mystic.es.dupont.com>
	* switched strcpy to strncpy to help protect against buffer
	  overflow.
	* ltdl.c passed int reference but a long was needed;
	  caused a fault on Solaris 64-bit compiles.
