@@ -1291,7 +1291,7 @@ The \fB-colors\fP option is required for this option to take effect.
 set the image type:
 \fBBilevel\fP, \fBGrayscale\fP, \fBPalette\fP,
 \fBPaletteMatte\fP, \fBTrueColor\fP, \fBTrueColorMatte\fP,
-\fBColorSeparation\fP, or \fBColorSeparationMatte\fP.
+\fBColorSeparation\fP, \fBColorSeparationMatte\fP, or \fBOptimize\fP.
 .TP
 .B "-units \fItype\fP"
 the type of image resolution: \fBUndefined\fP, \fBPixelsPerInch\fP, or
