@@ -2464,7 +2464,7 @@ to take effect.</dd>
 the image type:
 <b>Bilevel</b>, <b>Grayscale</b>, <b>Palette</b>,
 <b>PaletteMatte</b>, <b>TrueColor</b>, <b>TrueColorMatte</b>,
-<b>ColorSeparation</b>, or <b>ColorSeparationMatte</b>.
+<b>ColorSeparation</b>, <b>ColorSeparationMatte</b>, or <b>Optimize</b>.
 </dl>
 
 <dl>&nbsp;
